Add tab for blogs

--- a/_posts/2025-02-09-lino24.md
+++ b/_posts/2025-02-09-lino24.md
@@ -2,6 +2,7 @@
 title: Lindau Nobel Laureate Meeting 2024
 author: Pratiksha B. Gaikwad
 date: 2025-02-09 20:00:00 -0500
+permalink: /blogs/
 ---
 
 
