--- a/_posts/2025-02-09-lino24.md
+++ b/_posts/2025-02-09-lino24.md
@@ -1,6 +1,6 @@
 ---
 title: Lindau Nobel Laureate Meeting 2024
-author: Pratiksha B. Gaikwad
+author: pratiksha
 date: 2025-02-09 20:00:00 -0500
 ---
 
