--- a/_posts/2025-02-09-lino24.md
+++ b/_posts/2025-02-09-lino24.md
@@ -2,7 +2,7 @@
 title: Lindau Nobel Laureate Meeting 2024
 author: pratiksha
 date: 2025-02-09 20:00:00 -0500
-categories: [Blogs] 
+categories: [blogs, conferences] 
 ---
 
 
